
syntax = "proto3";

option go_package = "github.com/pitabwire/frame/tests;grpcping";

package grpcping;

service FramePing {
  // Sends a ping
  rpc SayPing (HelloRequest) returns (HelloResponse) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the pong
message HelloResponse {
  string message = 1;
}
